# otto

./: .gitignore  Autopilot.cpp  Autopilot.hpp  AveragingBuffer.cpp  AveragingBuffer.hpp  DataSource.cpp  DataSource.hpp  FlightDirector.cpp  FlightDirector.hpp  GISDatabase.cpp  GISDatabase.hpp  TimerSource.cpp  TimerSource.hpp  Utilities.cpp  Utilities.hpp
nav/: recovery.csv  recoverydb.cpp
rasppi/: Arduino.cpp  Arduino.hpp  CMakeLists.txt  HD44780.cpp  HD44780.hpp  LIS3MDL.cpp  LIS3MDL.hpp  LS20031.cpp  LS20031.hpp  LSM6.cpp  LSM6.hpp  LSM6DS33.cpp  LSM6DS33.hpp  Madgwick_AHRS.c  Madgwick_AHRS.h  Mahony_AHRS.c  Mahony_AHRS.h  Makefile  NMEA.cpp  NMEA.hpp  README.md  RpiAutopilot.cpp  RpiAutopilot.hpp  RpiDataSource.cpp  RpiDataSource.hpp  RpiTimerSource.cpp  RpiTimerSource.hpp  Vector.hpp  config.h.in  rasppi.cpp  test.cpp  test_arduino.cpp  test_clr.cpp  test_gps.cpp  test_imu.cpp  test_mag.cpp
rasppi/Rudder_Driver/: Rudder_Driver.ino
rasppi/tests/: test_arduino.cpp  test_gps.cpp  test_imu.cpp  test_mag.cpp
xplane/: GISDatabase.cpp  GISDatabase.hpp  XPlaneAutopilot.cpp  XPlaneAutopilot.hpp  XPlaneDataSource.cpp  XPlaneDataSource.hpp  XPlaneTimerSource.cpp  XPlaneTimerSource.hpp  local.xcconfig.example  xplane.cpp
xplane/gliders/: HALO AURORA.acf  HALO DAYTON.acf  HALO DUNDEE.acf
xplane/otto.xcodeproj/: project.pbxproj
xplane/otto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xplane/otto.xcodeproj/project.xcworkspace/xcuserdata/randy.xcuserdatad/: UserInterfaceState.xcuserstate
